--- a/app/src/main/res/layout/activity_bottom7.xml
+++ b/app/src/main/res/layout/activity_bottom7.xml
@@ -21,13 +21,13 @@
         <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:videoId="hbLbg_MNjnU" />
+            app:videoId="FSIQnrr2haE" />
 
         <TextView
             android:textColor="@color/white"
             android:layout_marginTop="30dp"
             android:layout_gravity="center_horizontal"
-            android:layout_width="250dp"
+            android:layout_width="300dp"
             android:layout_height="45dp"
             android:text="맨몸 오버헤드 스쿼트"
             android:textAlignment="center"
